Link to the contrubting guide in the docs

--- a/spec/example_app/app/views/layouts/docs.html.erb
+++ b/spec/example_app/app/views/layouts/docs.html.erb
@@ -14,6 +14,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="https://github.com/thoughtbot/administrate">GitHub</a></li>
         <li><a href="https://github.com/thoughtbot/administrate/issues/new">Feedback</a></li>
+        <li><a href="/contributing">Contributing Guide</a></li>
       </ul>
 
       <h3>Documentation</h3>
